lab/stacks/argocd-gatekeeper/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: cross-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments
