lab/stacks/argocd-gatekeeper/gatekeeper-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredcrosslabel
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredCrossLabel
      validation:
        openAPIV3Schema:
          type: object
          properties:
            label:
              type: string
            value:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredcrosslabel

        violation[{"msg": msg}] {
          labels := object.get(input.review.object.metadata, "labels", {})
          uid := object.get(input.review.object.metadata, "uid", "")
          uid != ""
          actual := object.get(labels, input.parameters.label, "")
          actual != input.parameters.value
          msg := sprintf("govdrift-resource-uid=%s; label %q must equal %q", [uid, input.parameters.label, input.parameters.value])
        }
